--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,4 +1,62 @@
+:root {
+    --content-font: sans-serif;
+    --display-font: sans-serif;
+    --black: #000000;
+    --white: #ffff;
+    --off-white: #f3f3f3;
+}
+
+/* ==== BASE STYLES ==== */
+
+body {
+    margin: 0;
+    background-color: var(--off-white);
+}
+
+
+/* ==== HEADER ==== */
+
+#main-header {
+    background-color: aqua;
+    padding: 0.5rem;
+}
+
+#main-header nav a {
+    border: 1px solid black;
+    display: block;
+    padding: 0.5rem;
+    margin: 5px;
+    text-decoration: none;
+}
+
+#main-header ul {
+    padding: 0;
+    margin: 0;
+}
+
+#main-header ul li {
+    display: block;
+    list-style: none;
+}
+
+/* ==== BODY ==== */
 
 .heading {
     text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    padding: 1rem;
+}
+
+p {
+    padding: 0.5rem;
+}
+
+/* ==== FOOTER ==== */
+
+#main-footer {
+    height: 100px;
+    padding: 0.5rem;
+    background-color: antiquewhite;
 }
