--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -6,6 +6,13 @@ h1 {
     transform: translate(-50%, -50%);
 }
 
+h2 {
+    border-bottom: 1px solid black;
+    max-width: 90%;
+    margin: 0 auto;
+    display: block;
+}
+
 img {
     max-width: 100%;
 }
