--- a/frontend/src/styles/large.css
+++ b/frontend/src/styles/large.css
@@ -1,3 +1,7 @@
 @media screen and (min-width: 800px) {
-    
+    main {
+        max-width: 1400px;
+        margin: 0 auto;
+        display: block;
+    }
 }
