--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -9,7 +9,7 @@ h1 {
 h2 {
     border-bottom: 1px solid black;
     max-width: 90%;
-    margin: 0 auto;
+    margin: 0.5rem auto;
     display: block;
 }
 
@@ -25,8 +25,27 @@ img {
     position: relative;
     top: 0;
     z-index: 0;
+    display: block;
+    margin: 0 auto;
 }
 
 .about-img {
     max-height: 300px;
+}
+
+/* ==== TESTIMONIAL CARD ==== */
+.testimonial-card {
+    max-width: 400px;
+    position: relative;
+    margin: 0 auto;
+    display: block;
+}
+
+.testimonial-card .testimonial-text {
+    padding: 0.5rem;
+    max-width: 384px;
+    z-index: 1;
+    position: absolute;
+    bottom: 0;
+    background-color: white;
 }
