--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -29,11 +29,16 @@ img {
     margin: 0 auto;
 }
 
+/* ==== ABOUT ==== */
+
 .about-img {
-    max-height: 300px;
+    display: block;
+    margin: 0 auto;
+    max-height: 400px;
 }
 
 /* ==== TESTIMONIAL CARD ==== */
+
 .testimonial-card {
     max-width: 400px;
     position: relative;
@@ -41,11 +46,11 @@ img {
     display: block;
 }
 
-.testimonial-card .testimonial-text {
+.testimonial-card p {
     padding: 0.5rem;
-    max-width: 384px;
+    max-width: 400px;
     z-index: 1;
     position: absolute;
-    bottom: 0;
-    background-color: white;
+    bottom: 0; 
+    background-color: rgba(255, 255, 255, 0.25);   
 }
