--- a/frontend/src/components/header.html
+++ b/frontend/src/components/header.html
@@ -1,18 +1,18 @@
 <nav>
     <ul>
-        <li>
+        <li class="nav-item">
             <a href="/index.html">Home</a>
         </li>
-        <li>
+        <li class="nav-item">
             <a href="/pages/portfolio.html">Portfolio</a>
         </li>
-        <li>
+        <li class="nav-item">
             <a href="/pages/pricing.html">Pricing</a>
         </li>
-        <li>
+        <li class="nav-item">
             <a href="/pages/contact.html">Contact</a>
         </li>
-        <li>
+        <li class="nav-item">
             <a href="/pages/about.html">About</a>
         </li>
     </ul>
