Navigation/hamburger menu work

--- a/frontend/src/components/header.html
+++ b/frontend/src/components/header.html
@@ -1,5 +1,5 @@
 <nav>
-    <ul>
+    <ul class="nav-menu">
         <li class="nav-item">
             <a href="/index.html">Home</a>
         </li>
@@ -16,4 +16,9 @@
             <a href="/pages/about.html">About</a>
         </li>
     </ul>
+    <button class="burger-menu">
+        <div class="top-line"></div>
+        <div class="mid-line"></div>
+        <div class="bot-line"></div>
+    </button>
 </nav>
